[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyntrace"
version = "0.5.0"
description = "Red-team, eval, and monitor your LLMs. Security-first, Python-native."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "security", "red-team", "eval", "observability", "ai", "jailbreak", "safety", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
server  = ["fastapi>=0.100", "uvicorn>=0.20", "websockets>=11.0"]
eval    = ["jsonschema>=4.0"]
secure  = ["sqlcipher3", "cryptography>=41.0"]
full    = ["pyntrace[server,eval,secure]", "sentence-transformers>=2.0"]

[project.scripts]
pyntrace = "pyntrace.cli:main"

[project.urls]
Homepage = "https://github.com/pinexai/pyntrace"
Documentation = "https://pinexai.github.io/pyntrace"
Repository = "https://github.com/pinexai/pyntrace"
Issues = "https://github.com/pinexai/pyntrace/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyntrace"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E731", "F541", "F401", "F841", "E401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
