[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyntrace"
version = "0.5.1"
description = "Red-team, eval, and monitor your LLMs. Security-first, Python-native."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "security", "red-team", "eval", "observability", "ai", "jailbreak", "safety", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
server  = ["fastapi>=0.100", "uvicorn>=0.20", "websockets>=11.0"]
eval    = ["jsonschema>=4.0"]
secure  = ["sqlcipher3", "cryptography>=41.0"]
azure   = ["openai>=1.0"]
bedrock = ["boto3>=1.34"]
groq    = ["openai>=1.0"]
mistral = ["mistralai>=1.0"]
cohere  = ["cohere>=5.0"]
together = ["openai>=1.0"]
providers = ["openai>=1.0", "anthropic>=0.30", "google-generativeai>=0.5",
             "mistralai>=1.0", "cohere>=5.0", "boto3>=1.34"]
full    = ["pyntrace[server,eval,secure,providers]", "sentence-transformers>=2.0"]
dev     = [
    "pyntrace[server,eval]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
pyntrace = "pyntrace.cli:main"

[project.urls]
Homepage = "https://github.com/pinexai/pyntrace"
Documentation = "https://pinexai.github.io/pyntrace"
Repository = "https://github.com/pinexai/pyntrace"
Issues = "https://github.com/pinexai/pyntrace/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyntrace"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501", "E731", "F541", "F401", "F841", "E401",
    # S-series suppressions — intentional patterns in a security testing tool:
    "S110",  # try-except-pass — used for optional dependency guards throughout
    "S311",  # random — non-crypto random is intentional for attack fuzzing/sampling
    "S603",  # subprocess — CLI tool needs subprocess, already audited
    "S607",  # partial executable path — git/CLI tools called by name intentionally
    "S310",  # urllib urlopen — HTTP client calls are intentional (webhooks, agents)
    "S608",  # SQL string build — table names are hardcoded literals, not user input
    "S104",  # bind all interfaces — Prometheus/Docker deployments need 0.0.0.0
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.bandit]
targets = ["pyntrace"]
skips = [
    "B101",  # assert_used — tests use assert
    "B110",  # try_except_pass — optional dependency guards throughout
    "B311",  # random — non-crypto use is intentional for attack fuzzing
    "B310",  # urllib_urlopen — HTTP client calls are intentional
    "B404",  # subprocess — CLI needs subprocess
    "B603",  # subprocess_without_shell_equals_true — explicit subprocess calls
    "B607",  # start_process_with_partial_path — CLI tools by name
    "B608",  # hardcoded_sql_expressions — table names are internal literals
]
